Revert "Add small gunpower (#185)"
This reverts commit e264fcf47f210bf8c94a8af107d536aab1453dc6.

--- a/src/main/resources/craftingmappings.json
+++ b/src/main/resources/craftingmappings.json
@@ -5294,10 +5294,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5310,10 +5310,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5326,10 +5326,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5342,10 +5342,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5358,10 +5358,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5374,10 +5374,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5390,10 +5390,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5406,10 +5406,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5422,10 +5422,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5438,10 +5438,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5454,10 +5454,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5470,10 +5470,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5486,10 +5486,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5502,10 +5502,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5518,10 +5518,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5534,10 +5534,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5550,10 +5550,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5566,10 +5566,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5582,10 +5582,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5598,10 +5598,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5614,10 +5614,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5630,10 +5630,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5646,10 +5646,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5662,10 +5662,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5678,10 +5678,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5694,10 +5694,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5710,10 +5710,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5726,10 +5726,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5742,10 +5742,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5758,10 +5758,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5774,10 +5774,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5790,10 +5790,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5806,10 +5806,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5822,10 +5822,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5838,10 +5838,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -5854,10 +5854,10 @@
         {
           "entryName": "mwc:copper_ingot",
           "isOreDictionary": false,
-          "count": 1
+          "count": 6
         },
         {
-          "entryName": "mwc:small_gunpowder",
+          "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
           "count": 6
         }
@@ -6639,7 +6639,7 @@
         {
           "entryName": "minecraft:gunpowder",
           "isOreDictionary": false,
-          "count": 4
+          "count": 6
         },
         {
           "entryName": "mwc:synthetic_polymer_composite",
