--- a/qodana.yaml
+++ b/qodana.yaml
@@ -7,3 +7,19 @@ include:
   - name: Deprecation
   - name: UNCHECKED_WARNING
   - name: FieldCanBeLocal
+  - name: NullableProblems
+  - name: FieldMayBeFinal
+  - name: RedundantCast
+  - name: UnnecessarySemicolon
+  - name: TrivialIf
+  - name: NonStrictComparisonCanBeEquality
+  - name: SillyAssignment
+  - name: UnnecessaryToStringCall
+  - name: StringBufferReplaceableByString
+  - name: UnnecessaryLocalVariable
+  - name: NonFinalFieldInEnum
+  - name: JavadocDeclaration
+  - name: SimplifyStreamApiCallChains
+  - name: JavadocReference
+  - name: RedundantTypeArguments
+  - name: CStyleArrayDeclaration
