--- a/qodana.yaml
+++ b/qodana.yaml
@@ -23,3 +23,8 @@ include:
   - name: JavadocReference
   - name: RedundantTypeArguments
   - name: CStyleArrayDeclaration
+  - name: DeprecatedIsStillUsed
+  - name: FunctionalExpressionCanBeFolded
+  - name: DanglingJavadoc
+  - name: ManualMinMaxCalculation
+  - name: FinalStaticMethod
