--- a/qodana.yaml
+++ b/qodana.yaml
@@ -2,3 +2,7 @@ version: "1.0"
 linter: jetbrains/qodana-jvm-community:2023.1
 include:
   - name: All
+exclude:
+  - name: All
+    paths:
+      - src/main/java/com/paneedah/mwc/models
