--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ plugins {
     id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.7'
     id 'com.gtnewhorizons.retrofuturagradle' version '1.+'
     id 'com.matthewprenger.cursegradle' version '1.4.0'
-    id "me.champeau.jmh" version "0.7.1"
+    id 'me.champeau.jmh' version '0.7.1'
+    id 'io.freefair.lombok' version '8.1.0'
 }
 
 // Add version to the jar name
