--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,2 @@
-# Sets default memory used for Gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs = -Xmx4G
-# Allow Gradle to use multi threading.
-org.gradle.parallel = true
-# Allow Gradle to cache build to avoid recompiling classes that did not change.
-org.gradle.caching = true
-
-# Mod Constants
-# Versioning must follow Ragnarök versioning convention: https://gist.github.com/JustDesoroxxx/5d4a45785ce19a6653ba99f72325c703
-id = mwc
-version = 1.20-0.1-Dev-1
+org.gradle.jvmargs=-Xmx4G
+org.gradle.daemon=false
