--- a/settings.gradle
+++ b/settings.gradle
@@ -1,22 +1,8 @@
 pluginManagement {
     repositories {
-        maven {
-            // RetroFuturaGradle
-            name = 'GTNH Maven'
-            url = uri('http://jenkins.usrv.eu:8081/nexus/content/groups/public/')
-            allowInsecureProtocol = true
-            mavenContent {
-                includeGroup('com.gtnewhorizons')
-                includeGroup('com.gtnewhorizons.retrofuturagradle')
-            }
-        }
         gradlePluginPortal()
-        mavenCentral()
-        mavenLocal()
+        maven { url = 'https://maven.minecraftforge.net/' }
     }
 }
 
-plugins {
-    // Automatic toolchain provisioning
-    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.5.0'
-}
+rootProject.name = 'mwc'
