--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ minecraft {
 
     username = 'Desoroxxx'
 
-    extraRunJvmArguments.addAll('-Xmx4G', '-Xms4G', '-Dforge.logging.console.level=debug', '-Dmixin.hotSwap=true', '-Dmixin.checks.interfaces=true', '-Dmixin.debug.export=true')
+    extraRunJvmArguments.addAll('-Xmx4G', '-Xms4G', '-Dforge.logging.console.level=debug', '-Dmixin.hotSwap=true', '-Dmixin.checks.interfaces=true', '-Dmixin.debug.export=true', '-Dfml.coreMods.load=com.paneedag.mwc.asm.MWCPlugin')
 
     injectedTags.put('ID', project.id)
     injectedTags.put('VERSION', project.version)
@@ -119,7 +119,7 @@ jar {
     manifest.attributes([
             'ModSide': 'BOTH',
             'FMLAT': "${project.id}_at.cfg",
-            'FMLCorePlugin': "com.paneedah.weaponlib.core.WeaponlibCorePlugin",
+            'FMLCorePlugin': "com.paneedah.mwc.asm.MWCPlugin",
             'FMLCorePluginContainsFMLMod': 'true',
             'ForceLoadAsMod': 'true'
     ])
