--- a/src/main/resources/craftingmappings.json
+++ b/src/main/resources/craftingmappings.json
@@ -5953,7 +5953,7 @@
       ]
     },
     {
-      "entryName": "mwc:Bullet277",
+      "entryName": "mwc:Bullet_277",
       "craftingGroup": "BULLET",
       "recipe": [
         {
