--- a/qodana.yaml
+++ b/qodana.yaml
@@ -1,7 +1,8 @@
 version: "1.0"
-linter: jetbrains/qodana-jvm-community:2023.1
+linter: jetbrains/qodana-jvm:2023.2
 profile:
   name: qodana.recommended
+fixesStrategy: cleanup/apply
 include:
   - name: DuplicateBranchesInSwitch
   - name: CommentedOutCode
