--- a/qodana.yaml
+++ b/qodana.yaml
@@ -2,7 +2,7 @@ version: "1.0"
 linter: jetbrains/qodana-jvm:2023.2
 profile:
   name: qodana.recommended
-fixesStrategy: cleanup/apply
+fixesStrategy: cleanup
 include:
   - name: DuplicateBranchesInSwitch
   - name: CommentedOutCode
