--- a/qodana.yaml
+++ b/qodana.yaml
@@ -34,6 +34,7 @@ include:
   - name: ManualMinMaxCalculation
   - name: FinalStaticMethod
 exclude:
+  - name: QodanaSanity
   - name: JavadocReference
   - name: All
     paths:
