--- a/build.gradle
+++ b/build.gradle
@@ -67,8 +67,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'Red-Studio-Ragnarok:Red-Core:0.4-Dev-2'
-    sources 'Red-Studio-Ragnarok:Red-Core:0.4-Dev-2:sources@jar'
+    implementation 'Red-Studio-Ragnarok:Red-Core:0.4-Dev-6'
+    sources 'Red-Studio-Ragnarok:Red-Core:0.4-Dev-6:sources@jar'
 
     jmh 'org.openjdk.jmh:jmh-core:1.36'
     jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.36'
@@ -96,7 +96,7 @@ tasks.srgifyBinpatchedJar.accessTransformerFiles.from(at)
 processResources {
     inputs.property 'id', project.id
     inputs.property 'version', project.version
-    filesMatching(['mcmod.info', 'pack.mcmeta']) { fcd ->
+    filesMatching('mcmod.info') { fcd ->
         include 'mcmod.info'
         fcd.expand (
                 'id': project.id,
