--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -14,10 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Code Checkout
-        uses: actions/checkout@v3.6.0
-          
-      - name: 'Qodana Scan'
-        uses: JetBrains/qodana-action@v2023.2.6
-        env:
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
+      - name: Qodana Composite
+        uses: Red-Studio-Ragnarok/Qodana-Composite@main
+        with:
+          qodana_token: ${{ secrets.QODANA_TOKEN }}
