--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,5 @@ org.gradle.daemon = true
 # Versioning must follow Ragnarök versioning convention: https://shor.cz/ragnarok_versioning_convention
 id = mwc
 version = 0.1-Dev-15
+
+redCoreVersion = MC-1.7-1.12-0.6-Dev-1
