--- a/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
@@ -10,7 +10,9 @@ body:
     id: description
     attributes:
       label: Describe the bug
-      description: Also tell us, what did you expect to happen?
+      description: |
+        Tell us what is the issue, also what did you expect to happen?
+        And if possible guide us through the steps required the reproduce the issue.
       placeholder: A clear and concise description of what the bug is.
     validations:
       required: true
